fix: Buttton iOS error

--- a/css/home.css
+++ b/css/home.css
@@ -77,8 +77,7 @@
 .reservation-box form {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    height: 100%;
+    min-height: 100%;
 }
 
 @media (min-width: 992px) {
